@@ -83,7 +83,11 @@ capability. If your CD-ROM drive has a jumper labeled
 <quote>Unix/PC</quote> or <quote>512/2048</quote>, place it in the
 <quote>Unix</quote> or <quote>512</quote> position.
 To start the install, simply choose the <quote>System installation</quote>
-entry in the firmware.  The Broadcom BCM91250A supports standard IDE devices,
+entry in the firmware.
+
+</para><para arch="mips;mipsel">
+
+The Broadcom BCM91250A supports standard IDE devices,
 including CD-ROM drives, but CD images for this platform are currently not
 provided because the firmware doesn't recognize CD drives.  In order to
 install Debian on an Broadcom BCM91480B evaluation board, you need an PCI
@@ -142,7 +146,7 @@ configure your system to use ISDN and PPP.
 </para><para condition="supports-tftp">
 
 You can also <emphasis>boot</emphasis> the installation system over the
-network. <phrase arch="mips">This is the preferred installation technique
+network. <phrase arch="mips;mipsel">This is the preferred installation technique
 for &arch-title;.</phrase>
 
 </para><para condition="supports-nfsroot">
@@ -258,7 +262,7 @@ Any storage system supported by the Linux kernel is also supported by
 the boot system.  Note that the current Linux kernel does not support
 the floppy drive.
 
-</para><para arch="mips">
+</para><para arch="mips;mipsel">
 
 Any storage system supported by the Linux kernel is also supported by
 the boot system.
