@@ -308,7 +308,7 @@ the <userinput>filename=</userinput> option in
 </para>
    </sect3>
 
-   <sect3 arch="mips">
+   <sect3 arch="mips;mipsel">
    <title>Broadcom BCM91250A and BCM91480B TFTP Booting</title>
 <para>
 
