@@ -15,6 +15,8 @@ installation-guide (2009xxxx) UNRELEASED; urgency=low
     - Remove sections about Netwinder/CATS, which are no longer supported.
     - Update the "supported hardware" table.
     - Add a section about Marvell's Kirkwood, which is now supported.
+  * Updates for MIPS:
+    - Show some sections on mipsel that apply there too.
 
  -- Frans Pop <fjp@debian.org>  Tue, 28 Apr 2009 18:13:46 +0200
 
